--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta charset="utf-8" />
     <title>Acoustic Level</title>
     <script src="angular.min.js"></script>
-    <script src="utils.js"></script>
+    <link rel="stylesheet" href="lib/bootstrap.min.css">
+    <link rel="stylesheet" href="lib/rzslider.css"/>
+    <script src="lib/ui-bootstrap-tpls.js"></script>
+    <script src="lib/rzslider.js"></script>
+
+    <script src="lib/utils.js"></script>
     <script src="app.js"></script>
     <script src="iomController.js"></script>
     <script src="clickDetector.js"></script>
@@ -14,6 +19,12 @@
 
   <body id="body">
     <div class="page" ng-controller="iomController">
+
+      <h2>Debug slider</h2>
+      <rzslider
+        data-rz-slider-model="debugSlider.value"
+        data-rz-slider-options="debugSlider.options"
+      ></rzslider>
 
 	Set the sensitivity by vertical swipe or top / bottom arrows (left to reset) <br>  <br>
 	Current sensitivity: {{sensitivity}}
