--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Acoustic Level</title>
-    <script src="angular.min.js"></script>
+    <script src="lib/angular.min.js"></script>
     <link rel="stylesheet" href="lib/bootstrap.min.css">
     <link rel="stylesheet" href="lib/rzslider.css"/>
     <script src="lib/ui-bootstrap-tpls.js"></script>
