no sleep attempt

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     <script src="lib/rzslider.js"></script>
 
     <script src="lib/utils.js"></script>
+    <script src="lib/NoSleep.min.js"></script>
     <script src="app.js"></script>
     <script src="iomController.js"></script>
     <script src="clickDetector.js"></script>
+
     <link rel="stylesheet" type="text/css" href="style.css"/>
     <link href='https://fonts.googleapis.com/css?family=Cousine:700' rel='stylesheet' type='text/css'> </head>
 
