--- a/index.html
+++ b/index.html
@@ -1,41 +1,66 @@
 <!doctype html>
 <html ng-app="iomTraining">
 
-  <head>
-    <meta charset="utf-8" />
-    <title>Acoustic Level</title>
-    <script src="lib/angular.min.js"></script>
-    <link rel="stylesheet" href="lib/bootstrap.min.css">
-    <link rel="stylesheet" href="lib/rzslider.css"/>
-    <script src="lib/ui-bootstrap-tpls.js"></script>
-    <script src="lib/rzslider.js"></script>
+<head>
+  <meta charset="utf-8" />
+  <title>Acoustic Level</title>
+  <script src="lib/angular.min.js"></script>
+  <link rel="stylesheet" href="lib/bootstrap.min.css">
+  <link rel="stylesheet" href="lib/rzslider.css"/>
+  <script src="lib/ui-bootstrap-tpls.js"></script>
+  <script src="lib/rzslider.js"></script>
 
-    <script src="lib/utils.js"></script>
-    <script src="lib/NoSleep.min.js"></script>
-    <script src="app.js"></script>
-    <script src="iomController.js"></script>
-    <script src="clickDetector.js"></script>
+  <script src="lib/utils.js"></script>
+  <script src="lib/NoSleep.min.js"></script>
+  <script src="app.js"></script>
+  <script src="iomController.js"></script>
+  <script src="clickDetector.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="style.css"/>
-    <link href='https://fonts.googleapis.com/css?family=Cousine:700' rel='stylesheet' type='text/css'> </head>
+  <link rel="stylesheet" type="text/css" href="style.css"/>
+  <link href='https://fonts.googleapis.com/css?family=Cousine:700' rel='stylesheet' type='text/css'>
+</head>
 
   <body id="body">
     <div class="page" ng-controller="iomController">
       <input type="button" ng-click='wake()' ng-value="wakeValue" />
 
-      <h2>Debug slider</h2>
+      <h2>number of legs</h2>
       <rzslider
-        data-rz-slider-model="debugSlider.value"
-        data-rz-slider-options="debugSlider.options"
+      data-rz-slider-model="legSlider.value"
+      data-rz-slider-options="legSlider.options"
       ></rzslider>
 
-	Set the sensitivity by vertical swipe or top / bottom arrows (left to reset) <br>  <br>
-	Current sensitivity: {{sensitivity}}
-  <br>
-click:  {{clickDetected}}
-<br>
-  power:   {{power}}
+      <h2>Sensitivity</h2>
+      <rzslider
+      data-rz-slider-model="tuneSlider.value"
+      data-rz-slider-options="tuneSlider.options"
+      ></rzslider>
+
+
+      <button ng-click="startFunc()">{{infoText}}</button>
+      <div ng-show="started">
+      {{legType}}wind leg number {{legNumber}}
 </div>
+      <br>
+      Current sensitivity: {{sensitivity}}
+      <br>
+      click:  {{clickDetected}}
+      <br>
+      power:   {{power}}
+
+
+      <svg style="width: 100%; height: 200px;">
+        <line x1="33%" y1="0" x2="33%" y2="100%" style="stroke:black;" />
+          <circle ng-show="upLeg&&started" cx="33%" cy="{{(1-currentDuration/(maxDuration*1.2))*200}}px"  r="6px" fill="red" />
+          <rect ng-repeat="a in upDurations" x="{{33-3*(1+$index)}}%" y="{{(1-a/(maxDuration*1.2))*200-10}}px" rx="10" ry="10" width="{{6*(1+$index)}}%" height="20px" />
+        <circle ng-repeat="a in upStore" cx="33%" cy="{{(1-a/(maxDuration*1.2))*200}}px"  r="6px" style="opacity:{{$index/nbUpStore}}" />
+
+
+        <line x1="66%" y1="0" x2="66%" y2="100%" style="stroke:black;" />
+            <circle ng-show="!upLeg&&started" cx="66%" cy="{{(currentDuration/(maxDuration*1.2))*200}}px"  r="6px" fill="red" />
+            <rect ng-repeat="a in downDurations" x="{{66-3*(1+$index)}}%" y="{{(a/(maxDuration*1.2))*200-10}}px" rx="10" ry="10"  width="{{6*(1+$index)}}%" height="20px" />
+          <circle ng-repeat="a in downStore" cx="66%" cy="{{(a/(maxDuration*1.2))*200}}px"  r="6px" style="opacity:{{$index/nbDownStore}}" />
+      </svg>
     </div>
   </body>
-</html>
+  </html>
