display mean and max of detectors

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
       {{legType}}wind leg number {{legNumber}}
 </div>
       <br>
-      Current sensitivity: {{sensitivity}}
+      Current sensitivity: {{sensitivityAverage}} Max {{sensitivityMax}} Threshold: {{sensitivityThreshold}}
+      <br>
+      Current power: {{powerAverage}} Max {{powerMax}} Threshold: {{powerThreshold}}
       <br>
       click:  {{clickDetected}}
       <br>
