--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
       data-rz-slider-options="legSlider.options"
       ></rzslider>
 
+      <h2>number of clicks</h2>
+      <rzslider
+      data-rz-slider-model="clickSlider.value"
+      data-rz-slider-options="clickSlider.options"
+      ></rzslider>
+
+
       <h2>Sensitivity</h2>
       <rzslider
       data-rz-slider-model="sensitivitySlider.value"
