--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <span ng-class="{redstyle: clickDetected}"> CLICK </span> {{clickDetected}}
       <br>
 
-      <svg style="width: 100%; height: 200px;">
+      <svg id="svg" ng-click="doClick($event)" style="width: 100%; height: 200px;">
         <line x1="33%" y1="0" x2="33%" y2="100%" style="stroke:black;" />
           <circle ng-show="upLeg&&started" cx="33%" cy="{{(1-currentDuration/(maxDuration*1.2))*200}}px"  r="6px" fill="red" />
           <rect ng-repeat="a in upDurations" x="{{33-3*(1+$index)}}%" y="{{(1-a/(maxDuration*1.2))*200-10}}px" rx="10" ry="10" width="{{6*(1+$index)}}%" height="20px" />
