--- a/index.html
+++ b/index.html
@@ -9,71 +9,70 @@
   <link rel="stylesheet" href="lib/rzslider.css"/>
   <script src="lib/ui-bootstrap-tpls.js"></script>
   <script src="lib/rzslider.js"></script>
+  <script src="lib/BufferLoad.js"></script>
+  <script src="lib/angular-dark-sky.min.js"></script>
 
   <script src="lib/utils.js"></script>
   <script src="lib/NoSleep.min.js"></script>
   <script src="app.js"></script>
+  <script src="lib/weatherController.js"></script>
   <script src="iomController.js"></script>
-  <script src="clickDetector.js"></script>
 
-  <link rel="stylesheet" type="text/css" href="style.css"/>
+  <link rel="stylesheet" type="text/css" href="css/style.css"/>
+  <link rel="stylesheet" type="text/css" href="css/weather-icons.min.css"/>
+  <link rel="stylesheet" type="text/css" href="css/weather-icons-wind.min.css"/>
   <link href='https://fonts.googleapis.com/css?family=Cousine:700' rel='stylesheet' type='text/css'>
 </head>
 
-  <body id="body">
-    <div class="page" ng-controller="iomController">
-      <input type="button" ng-click='wake()' ng-value="wakeValue" />
+<body id="body" ng-controller="weatherController">
+  <div class="page" ng-controller="iomController">
 
-      <h2>number of legs</h2>
+    <div class = "buttons">
+      <input type="button" ng-class="{bgredstyle: wakeLockEnabled}" ng-click='wake()' value="WakeLock" />
+      <input type="button" ng-click='' value="Weather" />
+      <input type="button" ng-click='' value="Distance" />
+      <input type="button" ng-click='' value="Stats" />
+      <input type="button" ng-click='' value="Export" />
+      <input type="button" ng-class="{redstyle: showSettings}" ng-click='showSettings = !showSettings' value="Settings" />
+    </div>
+    <div class="settingsBox" ng-show="showSettings">
+      <h2 class='titles'>Legs</h2>
       <rzslider
       data-rz-slider-model="legSlider.value"
       data-rz-slider-options="legSlider.options"
       ></rzslider>
 
-      <h2>number of clicks</h2>
+      <h2 class='titles'>Start procedure</h2>
       <rzslider
-      data-rz-slider-model="clickSlider.value"
-      data-rz-slider-options="clickSlider.options"
+      data-rz-slider-model="startSlider.value"
+      data-rz-slider-options="startSlider.options"
       ></rzslider>
-
-
-      <h2>Sensitivity</h2>
-      <rzslider
-      data-rz-slider-model="sensitivitySlider.value"
-      data-rz-slider-options="sensitivitySlider.options"
-      ></rzslider>
-
-      <h2>Power</h2>
-      <rzslider
-      data-rz-slider-model="powerSlider.value"
-      data-rz-slider-options="powerSlider.options"
-      ></rzslider>
-
-
-      <button ng-click="startFunc()">{{infoText}}</button>
-      <div ng-show="started">
-      {{legType}}wind leg number {{legNumber}}
-</div>
-      <br>
-      Current sensitivity: {{sensitivityAverage}} <span ng-class="{redstyle: sensitivityMax>sensitivitySlider.value}"> Max </span> {{sensitivityMax}} Threshold: {{sensitivitySlider.value}}
-      <br>
-      Current power: {{powerAverage}} <span ng-class="{redstyle: powerMax>powerSlider.value}"> Max </span> {{powerMax}} Threshold: {{powerSlider.value}}
-      <br>
-      <span ng-class="{redstyle: clickDetected}"> CLICK </span> {{clickDetected}}
-      <br>
-
-      <svg id="svg" ng-click="doClick($event)" style="width: 100%; height: 200px;">
-        <line x1="33%" y1="0" x2="33%" y2="100%" style="stroke:black;" />
-          <circle ng-show="upLeg&&started" cx="33%" cy="{{(1-currentDuration/(maxDuration*1.2))*200}}px"  r="6px" fill="red" />
-          <rect ng-repeat="a in upDurations" x="{{33-3*(1+$index)}}%" y="{{(1-a/(maxDuration*1.2))*200-10}}px" rx="10" ry="10" width="{{6*(1+$index)}}%" height="20px" />
-        <circle ng-repeat="a in upStore" cx="33%" cy="{{(1-a/(maxDuration*1.2))*200}}px"  r="6px" style="opacity:{{$index/nbUpStore}}" />
-
-
-        <line x1="66%" y1="0" x2="66%" y2="100%" style="stroke:black;" />
-            <circle ng-show="!upLeg&&started" cx="66%" cy="{{(currentDuration/(maxDuration*1.2))*200}}px"  r="6px" fill="red" />
-            <rect ng-repeat="a in downDurations" x="{{66-3*(1+$index)}}%" y="{{(a/(maxDuration*1.2))*200-10}}px" rx="10" ry="10"  width="{{6*(1+$index)}}%" height="20px" />
-          <circle ng-repeat="a in downStore" cx="66%" cy="{{(a/(maxDuration*1.2))*200}}px"  r="6px" style="opacity:{{$index/nbDownStore}}" />
-      </svg>
     </div>
-  </body>
-  </html>
+
+    <br>
+
+
+    <svg id="raceDisplay" class="raceDisplay" ng-click="doClick($event)" >
+      <line x1="25%" y1="5%" x2="25%" y2="95%" style="stroke:black;" />
+      <circle ng-show="upLeg&&started" cx="25%" cy="{{(1-currentDuration/(maxDuration*1.2))*200}}px"  r="6px" fill="red" />
+      <rect ng-repeat="a in upDurations" x="{{25-3*(1+$index)}}%" y="{{(1-a/(maxDuration*1.2))*200-10}}px" rx="10" ry="10" width="{{6*(1+$index)}}%" height="20px" />
+      <circle ng-repeat="a in upStore" cx="25%" cy="{{(1-a/(maxDuration*1.2))*200}}px"  r="6px" style="opacity:{{$index/nbUpStore}}" />
+
+
+      <line x1="75%" y1="5%" x2="75%" y2="95%" style="stroke:black;" />
+      <circle ng-show="!upLeg&&started" cx="75%" cy="{{(currentDuration/(maxDuration*1.2))*200}}px"  r="6px" fill="red" />
+      <rect ng-repeat="a in downDurations" x="{{75-3*(1+$index)}}%" y="{{(a/(maxDuration*1.2))*200-10}}px" rx="10" ry="10"  width="{{6*(1+$index)}}%" height="20px" />
+      <circle ng-repeat="a in downStore" cx="75%" cy="{{(a/(maxDuration*1.2))*200}}px"  r="6px" style="opacity:{{$index/nbDownStore}}" />
+    </svg>
+    <div class="infoDisplay" ng-class="{redstyle: clickDetected}">
+
+      <button ng-click="startFunc()" ng-class="{redstyle: started}">{{infoText}} </button>
+      <div ng-show="started">
+        {{legType}}wind leg number {{legNumber}}
+      </div>
+    </div>
+  </div>
+
+
+</body>
+</html>
