--- a/index.html
+++ b/index.html
@@ -147,12 +147,16 @@
   {{legNumber}}
   </div>
   <br>
-        <i ng-click="nextLeg(2)" class="wi wi-wind towards-315-deg" ng-class="{redstyle: started&&tack==2}"></i>
-        <i ng-click="nextLeg(1)" class="wi wi-wind towards-45-deg" ng-class="{redstyle: started&&tack==1}"></i>
+        <i ng-click="nextTack(1)" class="wi wi-wind towards-315-deg" ng-class="{redstyle: started&&tack==2}"></i>
+        <i ng-click="nextTack(2)" class="wi wi-wind towards-45-deg" ng-class="{redstyle: started&&tack==1}"></i>
         <br>
-        <i class="wi wi-wind towards-180-deg" ng-class="{redstyle: started&&tack==3}"></i>
+        <i ng-click="nextLeg(1)" class="wi wi-wind towards-180-deg" ng-class="{redstyle: started&&tack==3}"></i>
         <br><br>
-  </div>
+    </div>
+    <br>
+    <i class="wi wi-wind towards-270-deg" ng-show="leftClick"></i>
+    <i class="wi wi-wind towards-90-deg" ng-show="rightClick"></i>
+
 
 
 
