--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
       <button ng-click='showSettings = !showSettings' class="btn btn-default  btn-lg">
           <span ng-class="{redstyle: showSettings}" class="glyphicon glyphicon-cog"></span>
       </button>
+      <button ng-click='soundDisplay=(soundDisplay+1)%3' class="btn btn-default  btn-lg">
+        <div ng-show="!soundDisplay" class="glyphicon glyphicon-volume-off"> </div>
+        <div ng-show="soundDisplay==1" class="glyphicon glyphicon-volume-down"> </div>
+        <div ng-show="soundDisplay==2" class="glyphicon glyphicon-volume-up"> </div>
+    </button>
     </div>
       <div  ng-show="weatherDisplayed">
         <table class="weatherBox">
