--- a/progressTracker.html
+++ b/progressTracker.html
@@ -33,12 +33,36 @@
 
 <body id="body">
   <div class="page" ng-controller="ptController">
-    <div  class='test' >
-      <angular-star-rating max="4" value='4'  hover='false' is-readonly='true'></angular-star-rating>
-    </div>
-    <div  class='test2' >
-      <angular-star-rating max="maxValue" value='ratingValue'  hover='true' is-readonly='isReadonly'></angular-star-rating>
-    </div>
+    <button ng-click='next()' class="btn btn-default   btn-lg">
+       <span class="glyphicon glyphicon-triangle-right"></span>
+    </button>
+    <button ng-click='editMode=!editMode' class="btn btn-default   btn-lg">
+       <span  class="glyphicon glyphicon-edit"></span>
+    </button>
+    <form ng-show="editMode"  ng-submit="addSection($event)">
+      <input type="text" ng-model="newSection" placeholder="add section" />
+      <button type="submit" class="glyphicon glyphicon-plus"></button>
+    </form>
+    <span  ng-show="editMode&&currentSection<sections.length-1" ng-click="moveSectionDown()" class="glyphicon glyphicon-chevron-down"></span>
+    <span  ng-show="editMode&&currentSection" ng-click="moveSectionUp()" class="glyphicon glyphicon-chevron-up"></span>
+    <div ng-repeat='section in sections track by $index' ng-class="{redstyle: currentSection == $index}"> {{section.name}} </div>
+    <form ng-show="editMode"  ng-submit="addItem($event)">
+      <input type="text" ng-model="newItem" placeholder="add item" />
+      <button type="submit" class="glyphicon glyphicon-plus"></button>
+    </form>
+       <ul  ng-model="sections">
+       <li ng-repeat="item in sections[currentSection].items track by $index">
+         <span  ng-show="editMode" ng-click="removeItem($index)" class="glyphicon glyphicon-remove"></span>
+         <span  ng-show="editMode&&!$last" ng-click="moveItemDown($index)" class="glyphicon glyphicon-chevron-down"></span>
+         <span  ng-show="editMode&&!$first" ng-click="moveItemUp($index)" class="glyphicon glyphicon-chevron-up"></span>
+         {{item.name}}
+{{item.mean}}   <rzslider
+  data-rz-slider-model="item.value"
+  data-rz-slider-options="legSlider.options"
+  ></rzslider>
+        </li>
+     </ul>
+     <pre>section={{section}}</pre>
 </div>
 </body>
 </html>
