--- a/progressTracker.html
+++ b/progressTracker.html
@@ -67,7 +67,7 @@
     <div class='rzsliderDiv' ng-class="{
         'color-red': item.mean < 3,
         'color-blue': item.mean >= 3 && item.mean < 7,
-        'color-green': item.mean > 7}">toto
+        'color-green': item.mean > 7}">
    <rzslider
   data-rz-slider-model="item.value"
   data-rz-slider-options="legSlider.options"
